# modernartonline

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/app/: __init__.py  cards.py  config.py  database.py  game_logic.py  main.py  models.py  schemas.py  websocket.py
backend/app/routes/: actions.py  games.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx  websocket.js
frontend/src/components/: ArtistBoard.jsx  AuctionPanel.jsx  CardArtwork.jsx  GameBoard.jsx  GameEnd.jsx  Hand.jsx  Home.jsx  Lobby.jsx  PlayerList.jsx
frontend/src/data/: artwork.json
frontend/src/styles/: App.css
scripts/: extract_artwork.py
