[project]
name = "modern-art-online"
version = "0.1.0"
description = "Virtual assistant for playing Modern Art board game"
authors = [
    {name = "Suvansh"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
